use-cases/app-protect/basic/ingress/apps.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: nap-ingress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp 
  template:
    metadata:
      labels:
        app: webapp 
    spec:
      containers:
      - name: webapp 
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: nap-ingress
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: webapp
