use-cases/app-protect/basic/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nap-ingress
  namespace: nap-ingress
  annotations:
    appprotect.f5.com/app-protect-policy: "app-protect/www"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "app-protect/logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=10.1.1.7:515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: nap-ingress.f5demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: www-svc
            port:
              number: 80
